<resources>
    <string name="title_login">Login</string>
    <string name="app_name">brain</string>
    <string name="register">Registrar</string>
    <string name="ok">Aceptar</string>
    <string name="gmail">Login with Gmail</string>
    <string name="login_email_hint">Email</string>
    <string name="login_username_hint">Username</string>
    <string name="login_password_hint">Password</string>
    <string name="signup_login_hint">Already have an account? Sign In</string>
    <string name="login_signup_hint">Don\'t have an account? Sign Up</string>

    <string name="title_section1">Home</string>
    <string name="title_section2">Settings</string>
    <string name="title_section3">Chat</string>

    <string name="action_settings">Log out</string>
    <string name="placeholder_search">search</string>
    <string name="play_music">play music</string>

    <string name="movies_api_key">ec01f8c2eb6ac402f2ca026dc2d9b8fd</string>
    <string name="error_msg_unknown">An unexpected error occurred</string>
    <string name="posts_msg_not_found">Recuperar Publicaciones !</string>
    <string name="error_msg_no_internet">Not connected to internet</string>
    <string name="error_msg_timeout">The server took too long to respond</string>
</resources>