<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/loginCard"
    android:layout_gravity="center"
    android:layout_marginTop="@dimen/loginViewsMargin"
    android:layout_marginBottom="@dimen/loginViewsMargin"
    android:background="@color/cardview_gray_background"
    android:elevation="5dp"
    app:cardCornerRadius="@dimen/loginCardRadius">

    <LinearLayout style="@style/linearParent"
        android:layout_gravity="center"
        android:padding="@dimen/loginViewsMargin">

        <TextView style="@style/headerTextPrimary"
            android:layout_marginTop="@dimen/loginViewsMargin"
            android:text="@string/title_login" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputUsername"
            style="@style/parent"
            android:layout_marginTop="@dimen/loginViewsMargin">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextUsername"
                style="@style/modifiedEditText"
                android:layout_height="48dp"
                android:autofillHints=""
                android:hint="@string/login_username_hint"
                android:inputType="textPersonName"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputPassword"
            style="@style/parent"
            android:layout_marginTop="@dimen/loginViewsMargin">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextPassword"
                style="@style/modifiedEditText"
                android:layout_height="48dp"
                android:autofillHints=""
                android:hint="@string/login_password_hint"
                android:inputType="textPassword"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView style="@style/viewParent"
            android:layout_gravity="end"
            android:layout_marginTop="10dp"
            android:text="Forgot Password?"
            android:textColor="@color/primaryTextColor"
            android:textSize="@dimen/newsMoreTextSize" />

        <Button
            android:id="@+id/btnSignIn"
            style="@style/loginButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/loginViewsMargin"
            android:drawableStart="@drawable/ic_forward_24"
            android:drawablePadding="1dp"
            android:fontFamily="sans-serif"
            android:paddingStart="24dp"
            android:paddingEnd="24dp"
            android:text="@string/ok"
            android:textAllCaps="false"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/clickRegister"
            style="@style/parent"
            android:layout_height="48dp"
            android:layout_marginTop="@dimen/loginViewsMargin"
            android:fontFamily="sans-serif"
            android:onClick="viewRegisterClicked"
            android:text="@string/login_signup_hint"
            android:textAlignment="center"
            android:textColor="@color/primaryTextColor"
            android:textSize="16sp"
            android:textStyle="normal" />

        <Button
            android:id="@+id/btnGmail"
            style="@style/loginGmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/loginViewsMargin"
            android:drawableStart="@drawable/ic_gmail_36"
            android:drawablePadding="3dp"
            android:fontFamily="sans-serif"
            android:paddingStart="24dp"
            android:paddingEnd="24dp"
            android:text="@string/gmail"
            android:textAllCaps="false"
            android:textSize="16sp" />
    </LinearLayout>
</androidx.cardview.widget.CardView>
